--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
     </dependencies>
 
     <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <dropwizard.version>1.3.5</dropwizard.version>
       <java.version>11</java.version>
     </properties>
@@ -95,7 +96,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <release>10</release>
+            <release>${java.version}</release>
           </configuration>
         </plugin>
 
