--- a/conf/dynamo-cassandra-proxy.yaml.template
+++ b/conf/dynamo-cassandra-proxy.yaml.template
@@ -4,3 +4,4 @@ dynamoSecretKey: <SECRET>
 awsDynamodbEndpoint: apigateway.us-east-2.amazonaws.com
 streamsEnabled: false
 contactPoints: localhost
+dockerCassandra: false
