--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.helloworld.HelloWorldApplication</mainClass>
+                                    <mainClass>com.datastax.powertools.dcp.DCProxyApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
